--- a/renders.html
+++ b/renders.html
@@ -148,7 +148,7 @@
 								</ul>
 
 								<ul class="copyright">
-									<li>.LBEZERRA | 2024</li>
+									<li>.lbezerra | 2024</li>
 								</ul>
 							</section>
 							
