--- a/curriculo.html
+++ b/curriculo.html
@@ -7,8 +7,13 @@
 <html lang="pt-br">
 	<head>
 		<title>.lbezerra - Currículo</title>
-		<meta name="description" content="Creative Render, o portfólio pessoal de Lucas B. da Silva.">
-		<meta property="og:image" content="https://github.com/lucasbsilva/creative-render/blob/main/images/share.png?raw=true">
+		<meta property="og:site_name" content=".lbezerra">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content=".lbezerra">
+		<meta property="og:description" content="Portfólio pessoal de Lucas B. da Silva.">
+		<meta property="og:url" content="https://lucasbsilva.github.io/lbezerra">
+		<meta property="og:image" content="https://github.com/lucasbsilva/lbezerra/blob/main/images/share.png?raw=true">
+		<meta property="og:image:secure_url" content="https://github.com/lucasbsilva/lbezerra/blob/main/images/share.png?raw=true">
 		<!-- favicon -->
 		<link rel="apple-touch-icon" sizes="152x152" href="images/logo/favicon/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="images/logo/favicon/favicon-32x32.png">
@@ -142,13 +147,14 @@
 								<b>Habilidades desenvolvidas e aprimoradas:</b> Suíte de aplicativos Office 365; Active Directory.
 							</blockquote><hr>
 
-							<blockquote>
+							<!-- <blockquote>
 								<strong>Analista Júnior em Infraestrutura de TI</strong><br>
 								<i>ISA CTEEP</i><br>
 								Janeiro de 2024 - Atualmente.<br><br>
 								<b>Atividades:</b> Texto.<br> 					
 								<b>Habilidades desenvolvidas e aprimoradas:</b> Texto.
 							</blockquote><hr>
+							-->
 
 							<h2>Skills</h2>
 							<p>Conhecimentos nas áreas da tecnologia, desenvolvimento, design, marketing e administração. Idiomas e tecnologias conhecidas:</p>
