--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
 	<head>
 		<title>.lbezerra</title>
-		<meta property="og:site_name" content="Creative Render">
+		<meta property="og:site_name" content=".lbezerra">
 		<meta property="og:type" content="website">
-		<meta property="og:title" content="Creative Render">
-		<meta property="og:description" content="Creative Render, o portfólio pessoal de Lucas B. da Silva.">
-		<meta property="og:url" content="https://lucasbsilva.github.io/creative-render">
-		<meta property="og:image" content="https://github.com/lucasbsilva/creative-render/blob/main/images/share.png?raw=true">
-		<meta property="og:image:secure_url" content="https://github.com/lucasbsilva/creative-render/blob/main/images/share.png?raw=true">
+		<meta property="og:title" content=".lbezerra">
+		<meta property="og:description" content="Portfólio pessoal de Lucas B. da Silva.">
+		<meta property="og:url" content="https://lucasbsilva.github.io/lbezerra">
+		<meta property="og:image" content="https://github.com/lucasbsilva/lbezerra/blob/main/images/share.png?raw=true">
+		<meta property="og:image:secure_url" content="https://github.com/lucasbsilva/lbezerra/blob/main/images/share.png?raw=true">
 		<!-- favicon -->
 		<link rel="apple-touch-icon" sizes="152x152" href="images/logo/favicon/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="images/logo/favicon/favicon-32x32.png">
@@ -97,7 +97,8 @@
 									<a href="#" class="not-active">
 										<h2>🛠️ Logotipos e Identidade Visual</h2>
 										<div class="content">
-											<p>Conheça alguns dos logotipos que já desenvolvi.</p>
+											<!--<p>Conheça alguns dos logotipos que já desenvolvi. [estréia 13/01/23]</p>-->
+											<p>[Estréia em 13/01/23]</p>
 										</div>
 									</a>
 								</article>
@@ -121,7 +122,8 @@
 									<a href="#" class="not-active">
 										<h2>🛠️ Serviços impressos</h2>
 										<div class="content">
-											<p>Cartões de visita, convites, banners, livretos (...).</p>
+											<!-- <p>Cartões de visita, convites, banners, livretos (...).</p> -->
+											<p>[Estréia em 16/01/23]</p>
 										</div>
 									</a>
 								</article>
@@ -133,7 +135,8 @@
 									<a href="#" class="not-active">
 										<h2>🛠️ Projetos Autorais</h2>
 										<div class="content">
-											<p>Conteúdo gratuito para download.</p>
+											<!-- <p>Conteúdo gratuito para download.</p> -->
+											<p>[Estréia em 19/01/23]</p>
 										</div>
 									</a>
 								</article>
