--- a/web.html
+++ b/web.html
@@ -7,8 +7,13 @@
 <html lang="pt-br">
 	<head>
 		<title>.lbezerra - Artes para Web</title>
-		<meta name="description" content="Creative Render, o portfólio pessoal de Lucas B. da Silva.">
-		<meta property="og:image" content="https://github.com/lucasbsilva/creative-render/blob/main/images/share.png?raw=true">
+		<meta property="og:site_name" content=".lbezerra">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content=".lbezerra">
+		<meta property="og:description" content="Portfólio pessoal de Lucas B. da Silva.">
+		<meta property="og:url" content="https://lucasbsilva.github.io/lbezerra">
+		<meta property="og:image" content="https://github.com/lucasbsilva/lbezerra/blob/main/images/share.png?raw=true">
+		<meta property="og:image:secure_url" content="https://github.com/lucasbsilva/lbezerra/blob/main/images/share.png?raw=true">
 		<!-- favicon -->
 		<link rel="apple-touch-icon" sizes="152x152" href="images/logo/favicon/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="images/logo/favicon/favicon-32x32.png">
