--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 								<h3>Olá, seja muito bem-vindo! Me chamo Lucas Bezerra e este é meu portfolio pessoal.</h3>
 						
 								<blockquote>
-									O <abbr title="Meio para promoção de produtos ou serviços na internet."><strong>marketing digital</strong></abbr> possibilitou que muitos pudessem tirar seus projetos do papel e iniciar um empreendimento na internet. E uma das partes fundamentais para que se obtenha êxito neste "mercado", é ter uma identidade visual.<br/><br/>
+									O <abbr title="Meio para promoção de produtos ou serviços na internet."><strong>marketing digital</strong></abbr> possibilitou que muitos pudessem tirar seus projetos do papel e iniciar um empreendimento na internet. E uma das partes fundamentais para que se obtenha êxito neste "mercado" é ter uma identidade visual.<br/><br/>
 									
-									Alías <strong>um bom conteúdo, produto ou serviço possui, necessariamente, uma boa aparência</strong>.<br/><br/>
+									Alías, <strong>um bom conteúdo, produto ou serviço possuem, necessariamente, uma boa aparência</strong>.<br/><br/>
 
 									Abaixo você conhecerá alguns dos meus trabalhos como designer gráfico e ao final da página terá acesso aos meus contatos, caso tenha alguma demanda específica. Muito obrigado pela visita 👊🏻!
 
