--- a/gallery/gallery-am.html
+++ b/gallery/gallery-am.html
@@ -7,6 +7,13 @@
 <html lang="pt-br">
 	<head>
 		<title>.lbezerra - Ambiente Multifuncional</title>
+		<meta property="og:site_name" content=".lbezerra">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content=".lbezerra">
+		<meta property="og:description" content="Portfólio pessoal de Lucas B. da Silva.">
+		<meta property="og:url" content="https://lucasbsilva.github.io/lbezerra">
+		<meta property="og:image" content="https://github.com/lucasbsilva/lbezerra/blob/main/images/share.png?raw=true">
+		<meta property="og:image:secure_url" content="https://github.com/lucasbsilva/lbezerra/blob/main/images/share.png?raw=true">
 		<link rel="shortcut icon" href="../images/logo/favicon/favicon.ico" type="image/x-icon">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
