--- a/gallery/gallery-logos.html
+++ b/gallery/gallery-logos.html
@@ -7,6 +7,13 @@
 <html lang="pt-br">
 	<head>
 		<title>.lbezerra - Identidade Visual</title>
+		<meta property="og:site_name" content=".lbezerra">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content=".lbezerra">
+		<meta property="og:description" content="Portfólio pessoal de Lucas B. da Silva.">
+		<meta property="og:url" content="https://lucasbsilva.github.io/lbezerra">
+		<meta property="og:image" content="https://github.com/lucasbsilva/lbezerra/blob/main/images/share.png?raw=true">
+		<meta property="og:image:secure_url" content="https://github.com/lucasbsilva/lbezerra/blob/main/images/share.png?raw=true">
 		<link rel="shortcut icon" href="../images/logo/favicon/favicon.ico" type="image/x-icon">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -21,15 +28,40 @@
 						<h1><a href="index.html"><strong>Identidade Visual</strong> .lbezerra</a></h1>
 						<nav>
 							<ul>
-								<li><a href="../renders.html" class="icon solid fa-door-open"></a></li>
+								<li><a href="../index.html" class="icon solid fa-door-open"></a></li>
 							</ul>
 						</nav>
 					</header>
 
 					<div id="main">
+
+						<article class="thumb">
+							<a href="images/fulls/acl.png" class="image"><img src="images/thumbs/acl.png" alt="" /></a>
+							<h2>Ana Carolina & Lucas</h2>
+							<p>Logotipo</p>
+						</article>
+
 						<article class="thumb">
 							<a href="images/fulls/jn.png" class="image"><img src="images/thumbs/jn.png" alt="" /></a>
 							<h2>Dra. Juliana Nailza</h2>
+							<p>Logotipo</p>
+						</article>
+
+						<article class="thumb">
+							<a href="images/fulls/gettafe.png" class="image"><img src="images/thumbs/gettafe.png" alt="" /></a>
+							<h2>Gettafe Contabilidade</h2>
+							<p>Logotipo</p>
+						</article>
+
+						<article class="thumb">
+							<a href="images/fulls/na.png" class="image"><img src="images/thumbs/na.png" alt="" /></a>
+							<h2>Nerd Attack</h2>
+							<p>Logotipo</p>
+						</article>
+
+						<article class="thumb">
+							<a href="images/fulls/acm.png" class="image"><img src="images/thumbs/acm.png" alt="" /></a>
+							<h2>Dra. Ana Carla Medeiros</h2>
 							<p>Logotipo</p>
 						</article>
 
@@ -39,9 +71,46 @@
 							<p>Logotipo</p>
 						</article>
 
+
 						<article class="thumb">
-							<a href="images/fulls/acm.png" class="image"><img src="images/thumbs/acm.png" alt="" /></a>
-							<h2>Dra. Ana Carla Medeiros</h2>
+							<a href="images/fulls/verissimo.png" class="image"><img src="images/thumbs/verissimo.png" alt="" /></a>
+							<h2>Veríssimo Mens Clothes</h2>
+							<p>Logotipo</p>
+						</article>
+
+						<article class="thumb">
+							<a href="images/fulls/rp.png" class="image"><img src="images/thumbs/rp.png" alt="" /></a>
+							<h2>RP Oliveira</h2>
+							<p>Logotipo</p>
+						</article>
+
+						<article class="thumb">
+							<a href="images/fulls/kake.png" class="image"><img src="images/thumbs/kake.png" alt="" /></a>
+							<h2>Kake House</h2>
+							<p>Logotipo</p>
+						</article>
+
+						<article class="thumb">
+							<a href="images/fulls/faws.png" class="image"><img src="images/thumbs/faws.png" alt="" /></a>
+							<h2>FAWS WMS</h2>
+							<p>Logotipo</p>
+						</article>
+
+						<article class="thumb">
+							<a href="images/fulls/rb.png" class="image"><img src="images/thumbs/rb.png" alt="" /></a>
+							<h2>Rafael Bezerra</h2>
+							<p>Logotipo</p>
+						</article>
+
+						<article class="thumb">
+							<a href="images/fulls/mabelle.png" class="image"><img src="images/thumbs/mabelle.png" alt="" /></a>
+							<h2>Mabelle Cosméticos</h2>
+							<p>Logotipo</p>
+						</article>
+
+						<article class="thumb">
+							<a href="images/fulls/itb.png" class="image"><img src="images/thumbs/itb.png" alt="" /></a>
+							<h2>Improve the Best</h2>
 							<p>Logotipo</p>
 						</article>
 
