--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="web.html">Artes para Web</a></li>
-							<li><a href="#" class="not-active">🛠️ Logotipos e Identidade Visual</a></li>
+							<li><a href="gallery/gallery-logos.html">Logotipos e Identidade Visual</a></li>
 							<li><a href="renders.html">Modelagem 3D e Renders</a></li>
 							<li><a href="#" class="not-active">🛠️ Serviços Impressos</a></li>
 							<li><a href="#" class="not-active">🛠️ Projetos Autorais</a></li>
@@ -95,11 +95,10 @@
 									<span class="image">
 										<img src="images/logo.png" alt="" />
 									</span>
-									<a href="#" class="not-active">
-										<h2>🛠️ Logotipos e Identidade Visual</h2>
+									<a href="gallery/gallery-logos.html">
+										<h2>Logotipos e Identidade Visual</h2>
 										<div class="content">
-											<!--<p>Conheça alguns dos logotipos que já desenvolvi. [estréia 13/01/23]</p>-->
-											<p>[Estréia em 13/01/23]</p>
+											<p>Conheça alguns dos logotipos que já desenvolvi.</p>
 										</div>
 									</a>
 								</article>
