--- a/web.html
+++ b/web.html
@@ -53,10 +53,10 @@
 					<h2>Menu</h2>
 					<ul>
 						<li><a href="index.html">Página Inicial</a></li>
-							<li><a href="#" class="not-active">🛠️ Logotipos e Identidade Visual</a></li>
-							<li><a href="renders.html">Modelagem 3D e Renders</a></li>
-							<li><a href="#" class="not-active">🛠️ Serviços Impressos</a></li>
-							<li><a href="#" class="not-active">🛠️ Projetos Autorais</a></li>
+						<li><a href="gallery/gallery-logos.html">Logotipos e Identidade Visual</a></li>
+						<li><a href="renders.html">Modelagem 3D e Renders</a></li>
+						<li><a href="#" class="not-active">🛠️ Serviços Impressos</a></li>
+						<li><a href="#" class="not-active">🛠️ Projetos Autorais</a></li>
 					</ul>
 				</nav>
 
