--- a/renders.html
+++ b/renders.html
@@ -7,8 +7,13 @@
 <html lang="pt-br">
 	<head>
 		<title>.lbezerra - 3D e Renders</title>
-		<meta name="description" content="Creative Render, o portfólio pessoal de Lucas B. da Silva.">
-		<meta property="og:image" content="https://github.com/lucasbsilva/creative-render/blob/main/images/share.png?raw=true">
+		<meta property="og:site_name" content=".lbezerra">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content=".lbezerra">
+		<meta property="og:description" content="Portfólio pessoal de Lucas B. da Silva.">
+		<meta property="og:url" content="https://lucasbsilva.github.io/lbezerra">
+		<meta property="og:image" content="https://github.com/lucasbsilva/lbezerra/blob/main/images/share.png?raw=true">
+		<meta property="og:image:secure_url" content="https://github.com/lucasbsilva/lbezerra/blob/main/images/share.png?raw=true">
 		<!-- favicon -->
 		<link rel="apple-touch-icon" sizes="152x152" href="images/logo/favicon/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="images/logo/favicon/favicon-32x32.png">
@@ -49,7 +54,7 @@
 					<ul>
 						<li><a href="index.html">Página Inicial</a></li>
 						<li><a href="web.html">Artes para Web</a></li>
-						<li><a href="#" class="not-active">🛠️ Logotipos e Identidade Visual</a></li>
+						<li><a href="gallery/gallery-logos.html">Logotipos e Identidade Visual</a></li>
 						<li><a href="#" class="not-active">🛠️ Serviços Impressos</a></li>
 						<li><a href="#" class="not-active">🛠️ Projetos Autorais</a></li>
 					</ul>
