--- a/curriculo.html
+++ b/curriculo.html
@@ -65,7 +65,7 @@
 						<div class="inner">
 							<h1>Lucas Bezerra da Silva</h1>
 
-							<p>Graduado em <strong>Análise e Desenvolvimento de Sistemas</strong>, pela <strong>FATEC Guarulhos</strong>.</p><hr>
+							<p>Graduado em <strong>Análise e Desenvolvimento de Sistemas</strong> pela <strong>FATEC Guarulhos</strong>.</p><hr>
 							
 							<h2>Formação Acadêmica</h2>
 
