--- a/gallery/gallery-logos.html
+++ b/gallery/gallery-logos.html
@@ -114,6 +114,12 @@
 							<p>Logotipo</p>
 						</article>
 
+						<article class="thumb">
+							<a href="images/fulls/aero-logo.png" class="image"><img src="images/thumbs/aero-logo.png" alt="" /></a>
+							<h2>Aero Service</h2>
+							<p>Logotipo</p>
+						</article>
+
 					</div>
 			</div>
 
