--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<li><a href="web.html">Artes para Web</a></li>
 							<li><a href="gallery/gallery-logos.html">Logotipos e Identidade Visual</a></li>
 							<li><a href="renders.html">Modelagem 3D e Renders</a></li>
-							<li><a href="#" class="not-active">🛠️ Serviços Impressos</a></li>
+							<li><a href="gallery/gallery-impressos.html">Serviços Impressos</a></li>
 							<li><a href="#" class="not-active">🛠️ Projetos Autorais</a></li>
 						</ul>
 					</nav>
@@ -119,11 +119,10 @@
 									<span class="image">
 										<img src="images/impressos.png" alt="" />
 									</span>
-									<a href="#" class="not-active">
-										<h2>🛠️ Serviços impressos</h2>
+									<a href="gallery/gallery-impressos.html">
+										<h2>Serviços impressos</h2>
 										<div class="content">
-											<!-- <p>Cartões de visita, convites, banners, livretos (...).</p> -->
-											<p>[Estréia em 16/01/23]</p>
+											<p>Cartões de visita, convites, banners, livretos (...).</p>
 										</div>
 									</a>
 								</article>
