--- a/web.html
+++ b/web.html
@@ -55,7 +55,7 @@
 						<li><a href="index.html">Página Inicial</a></li>
 						<li><a href="gallery/gallery-logos.html">Logotipos e Identidade Visual</a></li>
 						<li><a href="renders.html">Modelagem 3D e Renders</a></li>
-						<li><a href="#" class="not-active">🛠️ Serviços Impressos</a></li>
+						<li><a href="gallery/gallery-impressos.html">Serviços Impressos</a></li>
 						<li><a href="#" class="not-active">🛠️ Projetos Autorais</a></li>
 					</ul>
 				</nav>
