--- a/gallery/gallery-a.html
+++ b/gallery/gallery-a.html
@@ -25,7 +25,7 @@
 			<div id="wrapper">
 
 					<header id="header">
-						<h1><a href="../renders.html"><strong>Bruna Pires Interiores</strong> .lbezerra</a></h1>
+						<h1><a href="../renders.html"><strong>Voltar para</strong> .lbezerra</a></h1>
 						<nav>
 							<ul>
 								<li><a href="../renders.html" class="icon solid fa-door-open"></a></li>
