--- a/curriculo.html
+++ b/curriculo.html
@@ -57,8 +57,8 @@
 						<li><a href="web.html">Artes para Web</a></li>
 						<li><a href="gallery/gallery-logos.html">Logotipos e Identidade Visual</a></li>
 						<li><a href="renders.html">Modelagem 3D e Renders</a></li>
+						<li><a href="autorais.html">Projetos Autorais</a></li>
 						<li><a href="gallery/gallery-impressos.html">Serviços Impressos</a></li>
-						<li><a href="#" class="not-active">🛠️ Projetos Autorais</a></li>
 					</ul>
 				</nav>
 					<div id="main">
