--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 							<li><a href="web.html">Artes para Web</a></li>
 							<li><a href="gallery/gallery-logos.html">Logotipos e Identidade Visual</a></li>
 							<li><a href="renders.html">Modelagem 3D e Renders</a></li>
+							<li><a href="autorais.html">Projetos Autorais</a></li>
 							<li><a href="gallery/gallery-impressos.html">Serviços Impressos</a></li>
-							<li><a href="#" class="not-active">🛠️ Projetos Autorais</a></li>
 						</ul>
 					</nav>
 
@@ -131,11 +131,10 @@
 									<span class="image">
 										<img src="images/autorais.png" alt="" />
 									</span>
-									<a href="#" class="not-active">
-										<h2>🛠️ Projetos Autorais</h2>
+									<a href="autorais.html">
+										<h2>Projetos Autorais</h2>
 										<div class="content">
-											<!-- <p>Conteúdo gratuito para download.</p> -->
-											<p>[Estréia em 19/01/23]</p>
+											<p>Conteúdo gratuito para download.</p>
 										</div>
 									</a>
 								</article>
