--- a/autorais.html
+++ b/autorais.html
@@ -67,7 +67,7 @@
 							
 							<span class="image main"><img src="images/banner-acl.png" alt="" /></span>
 
-							<p><strong>Este foi o convite que criei para o meu casamento!</strong> O chamei de "site-convite", pois me utilizei da estrutura de um site para colocar todas as informações referente ao evento. A ideia deste formato digital surgiu quando consideramos a facilidade de compartilhamento e a facilidade de as pessoas conseguirem acessar o convite pelo próprio celular, por exemplo.<br/><br/>
+							<p><strong>Este foi o convite que criei para o meu casamento!</strong> O chamei de "site-convite", pois me utilizei da estrutura de um site para colocar todas as informações referente ao evento. A ideia deste formato digital surgiu quando consideramos a facilidade de compartilhamento e a familiaridade que as pessoas possuem atualmente de acessar conteúdos pelo próprio celular, por exemplo.<br/><br/>
 							
 							Através dos botões abaixo você poderá ver o site-convite completo e ainda realizar o download de todos os arquivos do site, que disponibilizo para que você possa personalizar e <strong>criar seu próprio site-convite</strong>. Caso você não saiba trabalhar com estes tipos de arquivos ou não tenha contratado um profissional para isso, eu posso te ajudar com essa customização!
 							</p>
