--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 								<h3>Olá, seja muito bem-vindo! Me chamo Lucas Bezerra e este é meu portfolio pessoal.</h3>
 						
 								<blockquote>
-									O <abbr title="Meio para promoção de produtos ou serviços na internet."><strong>marketing digital</strong></abbr> possibilitou que muitos pudessem tirar seus projetos do papel e iniciar um empreendimento na internet. E uma das partes fundamentais para que se obtenha êxito neste "mercado" é ter uma identidade visual.<br/><br/>
+									O advento do <abbr title="Meio para promoção de produtos ou serviços na internet."><strong>marketing digital</strong></abbr> fez com que muitas pessoas percebessem que também tinham algo a entregar. E com isso, tiraram projetos do papel e iniciaram um "empreendimento" na internet. E uma das partes fundamentais para que se obtenha êxito neste "mercado" é ter uma boa identidade visual.<br/><br/>
 									
 									Alías, <strong>um bom conteúdo, produto ou serviço possuem, necessariamente, uma boa aparência</strong>.<br/><br/>
 
