--- a/curriculo.html
+++ b/curriculo.html
@@ -320,7 +320,7 @@
 								</ul>
 
 								<ul class="copyright">
-									<li>.LBEZERRA, 2024</li>
+									<li>.lbezerra | 2024</li>
 								</ul>
 							</section>
 							
