--- a/curriculo.html
+++ b/curriculo.html
@@ -147,14 +147,14 @@
 								<b>Habilidades desenvolvidas e aprimoradas:</b> Suíte de aplicativos Office 365; Active Directory.
 							</blockquote><hr>
 
-							<!-- <blockquote>
+							<blockquote>
 								<strong>Analista Júnior em Infraestrutura de TI</strong><br>
 								<i>ISA CTEEP</i><br>
-								Janeiro de 2024 - Atualmente.<br><br>
-								<b>Atividades:</b> Texto.<br> 					
-								<b>Habilidades desenvolvidas e aprimoradas:</b> Texto.
+								Março de 2024 - Atualmente.<br><br>
+								<b>Atividades:</b> Gestão da operação field (atendimento aos colaboradores internos), gestão de Service Desk, desenvolvimento e acompanhamento de projetos acerca de ativos de tecnologia, gestão de ativos de tecnologia (hardware).<br> 					
+								<b>Habilidades desenvolvidas e aprimoradas:</b> ITIL, gestão de equipes, CMDB.
 							</blockquote><hr>
-							-->
+							
 
 							<h2>Skills</h2>
 							<p>Conhecimentos nas áreas da tecnologia, desenvolvimento, design, marketing e administração. Idiomas e tecnologias conhecidas:</p>
